// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Contact /> rendering should render correctly 1`] = `
<div
  class="side-column contact"
>
  <div
    class="inner"
  >
    <div
      class="row"
    >
      <span
        class="label"
      >
        Email
        :
      </span>
      <a
        class="link"
        href="mailto:support@openwisp.co"
      >
        support@openwisp.co
      </a>
    </div>
    <div
      class="row"
    >
      <span
        class="label"
      >
        Helpdesk
        :
      </span>
      <a
        class="link"
        href="tel:+789 948 564"
      >
        +789 948 564
      </a>
    </div>
    <div
      class="contact-links"
    >
      <a
        class="link "
        href="https://twitter.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="twitter"
          class="contact-image "
          src="/assets/default/twitter.svg"
        />
      </a>
      <a
        class="link "
        href="https://facebook.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="facebook"
          class="contact-image "
          src="/assets/default/facebook.svg"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`<Contact /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  class="side-column contact"
>
  <div
    class="inner"
  >
    <div
      class="row"
    >
      <span
        class="label"
      >
        EMAIL
        :
      </span>
      <a
        class="link"
        href="mailto:support@openwisp.co"
      >
        support@openwisp.co
      </a>
    </div>
    <div
      class="row"
    >
      <span
        class="label"
      >
        HELPDESK
        :
      </span>
      <a
        class="link"
        href="tel:+789 948 564"
      >
        +789 948 564
      </a>
    </div>
    <div
      class="contact-links"
    >
      <a
        class="link "
        href="https://twitter.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="twitter"
          class="contact-image "
          src="/assets/default/twitter.svg"
        />
      </a>
      <a
        class="link "
        href="https://facebook.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="facebook"
          class="contact-image "
          src="/assets/default/facebook.svg"
        />
      </a>
    </div>
  </div>
</div>
`;
